--- a/_layouts/ul-post.html
+++ b/_layouts/ul-post.html
@@ -1,5 +1,5 @@
 ---
-layout: layout
+layout: ul-page
 ---
 
 <article>
@@ -9,7 +9,7 @@ layout: layout
 		<div>{{ page.date | date: "%Y" }}</div>
 	</div>
 	<h1 class="blogTitle">
-		<a href="{{ site.ul-base }}/{{ page.url }}">
+		<a href="{{ page.url }}">
 			{{ page.title }}
 		</a>
 	</h1>
