Margin/position/colour changes

--- a/_layouts/ul-page.html
+++ b/_layouts/ul-page.html
@@ -36,7 +36,7 @@
 	 			by
  				<a xmlns:cc="http://creativecommons.org/ns#" href="http://notclive.co.uk/" property="cc:attributionName" rel="cc:attributionURL">Jonathan Price</a>
 			  	is licensed under a
-			  	<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/" onclick="javascript:_gaq.push(['_trackEvent','outbound-widget','http://creativecommons.org']);">Creative Commons License.</a>
+			  	<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/" onclick="javascript:_gaq.push(['_trackEvent','outbound-widget','http://creativecommons.org']);">Creative Commons License</a>.
 				<a href="{{ site.ul-base }}/Ultralight-UK.rss">RSS Feed</a>
 			</footer>
 		</section>
