--- a/_layouts/ul-page.html
+++ b/_layouts/ul-page.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <title>
+		  {% if post.title %}
+        {{ post.title }} - 
+		  {% endif %}
+		  Ultralight UK
+    </title>
     <meta name="author" content="Jonathan Price" />
     <link rel="icon" href="{{ site.ul-base }}/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:100">
