--- a/_layouts/ul-page.html
+++ b/_layouts/ul-page.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>
-		  {% if post.title %}
-        {{ post.title }} - 
+		  {% if page.title %}
+        {{ page.title }} - 
 		  {% endif %}
 		  Ultralight UK
     </title>
