--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -1,4 +1,5 @@
 body {
+  color: #333;
 	margin: 0px;
 	min-width: 480px;
 	font-family: sans-serif;
@@ -106,7 +107,7 @@ article {
 }
 
 .blogTitle a {
-	color: black;
+	color: #333;
 	display: block;
 	text-decoration: none;
 }
@@ -122,7 +123,7 @@ article {
 .blogContent img {
 	max-width: 80%;
 	max-height: 800px;
-	border: 1px solid black;
+	border: 1px solid #000;
 	padding: 5px;
 }
 
