--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -130,8 +130,7 @@ article {
 /**************************** Footer ****************************/
 
 footer {
-	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 1.5rem;
 }
 
 /**************************** Disqus ***************************/
