Update style for new disqus

--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -131,7 +131,7 @@ a:hover {
 /**************************** Footer ****************************/
 
 .footer {
-	margin-bottom: 1.5rem;
+	margin: 1.5rem 0;
 }
 
 /**************************** Disqus ***************************/
