--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -1,6 +1,6 @@
 body {
-  color: #333;
-	margin: 0px;
+    color: #333;
+    margin: 0px;
 	min-width: 480px;
 	font-family: sans-serif;
 }
@@ -118,7 +118,7 @@ a:hover {
 }
 
 .blogContent p {
-	margin: 1rem 0;
+	margin: 0 0 1rem;
 }
 
 .blogContent img {
