Remove semantic tags

--- a/_layouts/ul-post.html
+++ b/_layouts/ul-post.html
@@ -2,7 +2,7 @@
 layout: ul-page
 ---
 
-<article>
+<div>
 	<h1 class="blogTitle">
 		<a href="{{ page.url }}">
 			{{ page.title }}
@@ -25,4 +25,4 @@ layout: ul-page
 			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 		})();
 	</script>
-</article>
+</div>
