--- a/_layouts/ul-page.html
+++ b/_layouts/ul-page.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Jonathan Price" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" href="{{ site.ul-base }}/favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:100">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:100">
     <link rel="stylesheet" type="text/css" href="{{ site.ul-base }}/css/style.css" />
     <link rel="alternate" type="application/rss+xml" href="{{ site.ul-base }}/Ultralight-UK.rss" />
     <script type="text/javascript">
@@ -33,9 +33,9 @@
 		</div>
 		<div class="root">
 			{% if page.banner %}
-				<section style="background-image: url({{ site.ul-base }}/{{ page.banner }})" class="banner"></section>
+				<div style="background-image: url({{ site.ul-base }}/{{ page.banner }})" class="banner"/>
 			{% else %}
-				<section style="background-image: url({{ site.ul-base }}/{{ site.ul-banner }})" class="banner"></section>
+				<div style="background-image: url({{ site.ul-base }}/{{ site.ul-banner }})" class="banner"/>
 			{% endif %}
 			{{ content }}
 			<div class="footer">
