--- a/_layouts/ul-page.html
+++ b/_layouts/ul-page.html
@@ -33,9 +33,9 @@
 		</div>
 		<div class="root">
 			{% if page.banner %}
-				<div style="background-image: url({{ site.ul-base }}/{{ page.banner }})" class="banner"/>
+				<div style="background-image: url({{ site.ul-base }}/{{ page.banner }})" class="banner"></div>
 			{% else %}
-				<div style="background-image: url({{ site.ul-base }}/{{ site.ul-banner }})" class="banner"/>
+				<div style="background-image: url({{ site.ul-base }}/{{ site.ul-banner }})" class="banner"></div>
 			{% endif %}
 			{{ content }}
 			<div class="footer">
