--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -1,6 +1,6 @@
 body {
-    color: #333;
-    margin: 0px;
+  color: #333;
+  margin: 0px;
 	min-width: 480px;
 	font-family: sans-serif;
 }
@@ -21,19 +21,19 @@ a:hover {
 
 @media (min-width: 1100px) {
 	html {
-		font-size: 1.45em
+		font-size: 23px
 	}
 }
 
 @media (min-width: 900px) and (max-width: 1100px) {
 	html {
-		font-size: 1.3em
+		font-size: 20px
 	}
 }
 
 @media (min-width: 700px) and (max-width: 900px) {
 	html {
-		font-size: 1.15em
+		font-size: 18px
 	}
 }
 
@@ -84,6 +84,10 @@ a:hover {
 }
 
 /**************************** Blog Post ****************************/
+
+.root h1, .root h2, .root h3, .root h4 {
+  margin-bottom: 0;
+}
 
 .article {
   margin: 0 0 5rem 0;
