--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -78,11 +78,13 @@ a:hover {
 /**************************** Banner ****************************/
 
 .banner {
-  border: 1px solid #333;
+    width: 100%;
 	height: 250px;
-	margin: 1.5rem 0;
+	margin: 0 0 45px 0;
+	margin: 0 0 2.5rem 0;
+    border-bottom: 20px solid #222;
 	background-size: cover;
-	background-position: center;
+	background-position: center;	
 }
 
 /**************************** Blog Post ****************************/
