--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -40,12 +40,18 @@ a:hover {
 /**************************** Header Bar ****************************/
 
 .header {
+	padding: 18px 0;
+	padding: 1rem 0;
+	margin: 0 auto 45px;
+	margin: 0 auto 2.5rem;
+	border-bottom: 20px solid #222;
 	font-family: Raleway;
-	padding: 15px 0;
 	color: #999;
-	margin: auto;
-	background: #222;
-	border-bottom: 7px solid #111;
+}
+
+.header .titles {
+	margin-bottom: 18px 0;
+	margin-bottom: 1rem 0;
 }
 
 .header h1, .header h3 {
@@ -55,13 +61,14 @@ a:hover {
 
 .header h1 {
 	font-weight: normal;
-	margin-right: 10px;
+	margin-right: 18px;
+	margin-right: 1rem;
 	font-size: 54px;
 	font-size: 3rem;
 }
 
 .header h3 {
-  font-size: 36px;
+    font-size: 36px;
 	font-size: 2rem;
 }
 
@@ -71,20 +78,13 @@ a:hover {
 }
 
 .header a:hover {
-	color: #666;
+    color: #666;
 }
 
-
-/**************************** Banner ****************************/
-
 .banner {
-    width: 100%;
 	height: 250px;
-	margin: 0 0 45px 0;
-	margin: 0 0 2.5rem 0;
-    border-bottom: 20px solid #222;
 	background-size: cover;
-	background-position: center;	
+	background-position: center;
 }
 
 /**************************** Blog Post ****************************/
