--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -47,11 +47,12 @@ a:hover {
 	border-bottom: 20px solid #222;
 	font-family: Raleway;
 	color: #999;
+	background: #222;
 }
 
 .header .titles {
-	margin-bottom: 18px 0;
-	margin-bottom: 1rem 0;
+	margin-bottom: 18px;
+	margin-bottom: 1rem;
 }
 
 .header h1, .header h3 {
