--- a/_layouts/ul-post.html
+++ b/_layouts/ul-post.html
@@ -2,27 +2,30 @@
 layout: ul-page
 ---
 
-<div>
-	<h1 class="blogTitle">
-		<a href="{{ page.url }}">
-			{{ page.title }}
-		</a>
-	</h1>
-	<div class="date">
-		<div>{{ page.date | date: "%d" }}</div>
-		<div>{{ page.date | date: "%b" }}</div>
-		<div>{{ page.date | date: "%Y" }}</div>
-	</div>
-	<div class="blogContent">	
-		{{ content }}
-	</div>
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-		var disqus_shortname = 'ultralightuk';
-		(function() {
-			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-			dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-		})();
-	</script>
+<div class="article">
+    <div class="header">
+        <h1 class="centered">
+	        <a href="{{ page.url }}">
+		        {{ page.title }}
+	        </a>
+        </h1>
+    </div>
+    <div class="date">
+	    <div>{{ page.date | date: "%d" }}</div>
+	    <div>{{ page.date | date: "%b" }}</div>
+	    <div>{{ page.date | date: "%Y" }}</div>
+    </div>
+    <div class="centered">	
+	    {{ content }}
+    </div>
 </div>
+
+<div class="article centered" id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'ultralightuk';
+    (function() {
+	    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+	    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
