--- a/_layouts/ul-page.html
+++ b/_layouts/ul-page.html
@@ -8,7 +8,8 @@
         Ultralight UK
     </title>
     <meta name="author" content="Jonathan Price" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="{{ site.ul-base }}/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:100">
     <link rel="stylesheet" type="text/css" href="{{ site.ul-base }}/css/style.css" />
