--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 18px;
+}
+
 body {
     color: #0F0F00;
     margin: 0;
@@ -17,10 +21,6 @@ body {
 
 /* moves date below header */
 @media (max-width: 800px) {
-
-	html {
-		font-size: 18px
-	}
 
     .date {
         margin-bottom: 18px;
@@ -57,16 +57,16 @@ body {
 	    width: 70px;
     }
     
-        
     .centered {
         padding: 0 90px;
     }
 }
 
 @media (min-width: 1100px) {
-	html {
-		font-size: 22px
-	}
+
+    html {
+        font-size: 22px
+    }
 }
 
 /**************************** Header Bar ****************************/
