--- a/ul/css/style.css
+++ b/ul/css/style.css
@@ -138,8 +138,8 @@ body {
 }
 
 .article {
-  margin-top: 90px;
-  margin-top: 5rem;
+  margin-top: 72px;
+  margin-top: 4rem;
   margin-bottom: 36px;
   margin-bottom: 2rem;
 }
@@ -150,10 +150,15 @@ body {
   line-height: 1.4;
 }
 
+.article li {
+  line-height: 1.4;
+}
+
 .article img {
-  max-width: 80%;
+  max-width: 100%;
   max-height: 800px;
   border: 1px solid #0F0F00;
+  box-sizing: border-box;
   padding: 5px;
 }
 
