--- a/_layouts/ul-post.html
+++ b/_layouts/ul-post.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="{{ site.ul-base }}/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:100">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:100">
     <link rel="stylesheet" type="text/css" href="{{ site.ul-base }}/css/style.css" />
     <link rel="alternate" type="application/rss+xml" href="{{ site.ul-base }}/Ultralight-UK.rss" />
     <script type="text/javascript">
